--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,10 @@
 
 name: 每日新闻定时推送
 
-on:
-  schedule: # 每日定时推送新闻
-    - cron: "*/5 * * * *" # 分 时 日 月 星期
+on: [push]
+
+  # schedule: # 每日定时推送新闻
+  #   - cron: "*/5 * * * *" # 分 时 日 月 星期
 
 jobs:
   GLaDOS-CheckIn:
